<resources>
    <!-- Existing strings -->
    <string name="app_name">Tutor Time</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="jonathan_smith">Jonathan Smith</string>
    <string name="subjects_mathematics_physics">Subjects: Mathematics, Physics</string>
    <string name="bio_experienced_tutor_with_a_strong_background_in_mathematics_and_physics_passionate_about_helping_students_excel_in_their_studies">Bio: Experienced tutor with a strong background in Mathematics and Physics. Passionate about helping students excel in their studies.</string>
    <string name="contact_jonathansmith_gmail_com">Contact: jonathansmith@gmail.com</string>
    <string name="book_a_session">Book a Session</string>
    <string name="age_25">Age: 25</string>
    <string name="phd_electrical_engineering">PHD:Electrical Engineering</string>
    <string name="age_28" />
    <string name="paypal_client_id">AeXROYuQMXFFQ7H99Qghs07CqXiU1bnzgoc2OlPDzKB4-7J3UoughuHzQ_kysmtCRQust1tpxc2tpsv_</string>

    <!-- Spinner and Selection Strings -->
    <string-array name="course_list">
        <item>Select Course</item>
        <item>Mathematics</item>
        <item>Science</item>
        <item>Social Studies</item>
        <item>English</item>
    </string-array>

    <string-array name="grade_levels">
        <item>Select Grade</item>
        <item>Grade 1</item>
        <item>Grade 2</item>
        <item>Grade 3</item>
        <item>Grade 4</item>
        <item>Grade 5</item>
        <item>Grade 6</item>
        <item>Grade 7</item>
        <item>Grade 8</item>
        <item>Grade 9</item>
        <item>Grade 10</item>
        <item>Grade 11</item>
        <item>Grade 12</item>
    </string-array>

    <string-array name="time_list">
        <item>Select Time</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
        <item>8:00 PM</item>
        <item>9:00 PM</item>
    </string-array>

    <!-- Spinner Hint Strings -->
    <string name="select_course_hint">Select Course</string>
    <string name="select_grade_hint">Select Grade</string>
    <string name="select_time_hint">Select Time</string>
    <string name="google_map_api_key">AIzaSyC_0Gp7kPUNqCIVSqn1RyyaQgKUDw8Okpc</string>

    <string name="terms_of_use">
        <![CDATA[
    By applying to become a tutor on Tutor Time, you agree to comply with the following Terms and Conditions:\n\n

    1. Eligibility and Qualifications\n
    1.1. You confirm that you possess the necessary qualifications, skills, and experience to provide tutoring services in the subjects you apply to tutor for. This includes, but is not limited to, relevant academic degrees, certifications, or professional experience.\n\n
    1.2. You agree to provide accurate and truthful information regarding your qualifications, background, and experience during the application process and while using the Application.\n\n
    1.3. You agree to promptly update your profile if your qualifications, availability, or other relevant details change.\n\n

    2. Professional Conduct\n
    2.1. As a tutor, you are expected to provide high-quality, professional, and respectful tutoring services to students.\n\n
    2.2. You will not engage in any form of harassment, discrimination, or unethical behavior toward students or any other users of the Application.\n\n

    2. Professional Conduct\n
    2.1. As a tutor, you are expected to provide high-quality, professional, and respectful tutoring services to students.\n\n
    2.2. You will not engage in any form of harassment, discrimination, or unethical behavior toward students or any other users of the Application.\n\n

    3. Tutoring Services\n
    3.1. You agree to deliver tutoring sessions in the subjects and topics you have specified in your profile and in accordance with your qualifications.\n\n
    3.2. You agree to maintain confidentiality and respect the privacy of students, including not disclosing personal information shared during tutoring sessions.\n\n
    3.3. You acknowledge that your services are delivered remotely or in person, depending on the format chosen for each tutoring session, and that you are responsible for ensuring a safe and conducive learning environment.\n\n

    4. Payment and Fees\n
    4.1. You agree that the compensation for your tutoring services will be handled through the payment system set forth by Tutor Time.\n\n
    4.2. You understand and accept the fees or commissions that may be deducted by Tutor Time from your tutoring earnings.\n\n
    4.3. Payments will be processed according to the payment schedule defined by Tutor Time, and you agree to provide accurate payment details to facilitate timely payments.\n\n

    5. Background Check and Verification\n
    5.1. You agree to undergo any background checks or verification processes required by Tutor Time, including identity verification and educational qualifications checks.\n\n
    5.2. You understand that your application may be rejected or your tutoring services suspended if the verification process reveals discrepancies or issues.\n\n

    6. Availability and Scheduling\n
    6.1. You are responsible for managing your availability and ensuring that you are present for scheduled tutoring sessions.\n\n
    6.2. You agree to notify students and Tutor Time in advance if you are unable to attend a scheduled session. You may be subject to penalties for repeated no-shows or cancellations without valid reasons.\n\n

    7. Termination\n
    7.1. Either you or Tutor Time may terminate this agreement at any time, with or without cause, by providing notice as specified in the Application.\n\n
    7.2. Tutor Time reserves the right to suspend or remove your account if you fail to comply with these Terms and Conditions or if any complaints or issues arise regarding your tutoring services.\n\n

    8. Liability\n
    8.1. You agree to hold harmless and indemnify Tutor Time from any claims, damages, or liabilities arising out of your actions as a tutor, including but not limited to claims related to tutoring services, student interactions, or any breach of these Terms and Conditions.\n\n
    8.2. You acknowledge that Tutor Time does not provide any direct tutoring services and acts solely as a platform for connecting tutors and students.\n\n

    9. Amendments\n
    9.1. Tutor Time reserves the right to modify or update these Terms and Conditions at any time. Any changes will be communicated to you, and continued use of the platform will constitute acceptance of the updated terms.\n\n\n

    By clicking "Accept," you agree to comply with these Terms and Conditions and acknowledge that you have read and understood the rules governing your participation as a tutor on Tutor Time.
    ]]>
    </string>
</resources>
