<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5722">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="John"
        android:scaleType="fitXY"
        tools:ignore="HardcodedText"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="37dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/jonathan_smith"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorProfilePic"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/tutorAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subjects_mathematics_physics"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorName"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="357dp" />

    <TextView
        android:id="@+id/tutorBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/bio_experienced_tutor_with_a_strong_background_in_mathematics_and_physics_passionate_about_helping_students_excel_in_their_studies"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorAge" />

    <TextView
        android:id="@+id/tutorContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/contact_jonathansmith_gmail_com"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorBio" />

    <Button
        android:id="@+id/bookSessionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/book_a_session"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorContact" />

    <TextView
        android:id="@+id/tutorAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_25"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds"
        tools:layout_editor_absoluteY="410dp" />

    <TextView
        android:id="@+id/tutorPHD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phd_electrical_engineering"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="432dp" />

</androidx.constraintlayout.widget.ConstraintLayout>