<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2B536">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Out"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:padding="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/baseline_arrow_back_24" />

    <ImageButton
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notifications"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:padding="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/baseline_content_paste_search_24" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_below="@id/back_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="John"
        android:scaleType="fitXY"
        android:src="@drawable/profile_pic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginTop="30dp"
        android:text="@string/jonathan_smith"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="8dp"
        android:text="@string/subjects_mathematics_physics"
        android:textSize="16sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tutorBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/bio_experienced_tutor_with_a_strong_background_in_mathematics_and_physics_passionate_about_helping_students_excel_in_their_studies"
        android:textSize="14sp"
        android:layout_below="@id/Age" />

    <TextView
        android:id="@+id/tutorContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tutorBio"
        android:layout_marginTop="20dp"
        android:text="@string/contact_jonathansmith_gmail_com"
        android:textSize="14sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tutorAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tutorContact"
        android:layout_marginTop="15dp"
        android:text="@string/age_25"
        android:textSize="16sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tutorPHD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tutorAge"
        android:layout_marginTop="15dp"
        android:text="@string/phd_electrical_engineering"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
